; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/local/extr_43427.c_victim_function.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/local/extr_43427.c_victim_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@array1_size = common dso_local global i64 0, align 8
@array2 = common dso_local global i32* null, align 8
@array1 = common dso_local global i32* null, align 8
@temp = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @victim_function(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @array1_size, align 8
  %5 = icmp ult i64 %3, %4
  br i1 %5, label %6, label %18

6:                                                ; preds = %1
  %7 = load i32*, i32** @array2, align 8
  %8 = load i32*, i32** @array1, align 8
  %9 = load i64, i64* %2, align 8
  %10 = getelementptr inbounds i32, i32* %8, i64 %9
  %11 = load i32, i32* %10, align 4
  %12 = mul nsw i32 %11, 512
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32, i32* %7, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @temp, align 4
  %17 = and i32 %16, %15
  store i32 %17, i32* @temp, align 4
  br label %18

18:                                               ; preds = %6, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
